--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "babel": "^6.23.0",
+    "core-js": "^3.18.3",
+    "npm-check": "^5.9.2",
     "swiper": "^7.0.9",
     "vue": "^3.0.0"
   },
@@ -17,9 +19,12 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "autoprefixer": "^10.3.7",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.0.0",
+    "postcss": "^8.3.9",
+    "tailwindcss": "^2.2.17"
   },
   "eslintConfig": {
     "root": true,
