--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "swipercircular",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/prstwo/swiper-circular",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "node ./node_modules/vue-gh-pages/index.js"
+
   },
   "dependencies": {
     "babel": "^6.23.0",
@@ -25,7 +28,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.0.0",
     "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "vue-gh-pages": "^1.19.1"
   },
   "eslintConfig": {
     "root": true,
