--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
   "dependencies": {
     "babel": "^6.23.0",
     "core-js": "^3.18.3",
     "npm-check": "^5.9.2",
     "swiper": "^7.0.9",
+    "travis": "^0.1.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -24,8 +26,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.0.0",
+    "gh-pages": "^3.2.3",
     "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "vue-gh-pages": "^1.19.1"
   },
   "eslintConfig": {
     "root": true,
